--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -218,14 +218,14 @@ components:
           type: number
       style: form
       explode: false
-    time:
-      name: time
+    datetime:
+      name: datetime
       in: query
-      description: >
-        Either a date-time or a period string that adheres to RFC3339. Examples:
+      description: |
+        Either a date-time or an interval containing date-times that adhere to RFC3339. Examples:
 
         * A date-time: "2018-02-12T23:20:50Z" 
-        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S" 
+        * An interval : "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/.."
 
         Only features that have a temporal property that intersects the value
         of `time` are selected. If a feature has multiple temporal properties, it
@@ -286,7 +286,7 @@ components:
       type: object
       allOf:
         - $ref: '#/components/schemas/bboxFilter'
-        - $ref: '#/components/schemas/timeFilter'
+        - $ref: '#/components/schemas/datetimeFilter'
         - $ref: '#/components/schemas/intersectsFilter'
         - type: object
           properties:
@@ -338,34 +338,35 @@ components:
       properties:
         bbox:
           $ref: '#/components/schemas/bbox'
-    timeFilter:
-      description: An object representing a time based filter.
-      type: object
-      properties:
-        time:
-          $ref: '#/components/schemas/time'
     intersectsFilter:
       type: object
       description: Only returns items that intersect with the provided polygon.
       properties:
         intersects:
           $ref: 'https://geojson.org/schema/Geometry.json'
-    time:
+    datetimeFilter:
+      description: An object representing a datetime-based filter.
+      type: object
+      properties:
+        datetime:
+          $ref: '#/components/schemas/datetimeOrDatetimeInterval'
+    datetimeOrDatetimeInterval:
       type: string
-      description: >
-        Either a date-time or a period string that adheres to RFC 3339.
-        Examples:
+      description: |
+        Either a date-time or an interval containing date-times that adhere to RFC3339. Examples:
 
-        * A date-time: "2018-02-12T23:20:50Z"  
-        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
+        * A date-time: "2018-02-12T23:20:50Z"
+        * An interval : "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/.."
 
-        Only features that have a temporal property that intersects the value of
-        `time` are selected.
-
-        If a feature has multiple temporal properties, it is the decision of the
-        server whether only a single temporal property is used to determine the
-        extent or all relevant temporal properties.
+        Only features that have a temporal property that intersects the value
+        of `time` are selected. If a feature has multiple temporal properties, it
+        is the decision of the server whether only a single temporal property is
+        used to determine the extent or all relevant temporal properties.
       example: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
+    datetime:
+      type: string
+      description: A date-time that adheres to RFC 3339.
+      example: '2018-02-12T00:00:00Z'
     catalogDefinition:
       type: object
       required:
@@ -595,7 +596,7 @@ components:
       description: provides the core metatdata fields plus extensions
       properties:
         datetime:
-          $ref: '#/components/schemas/time'
+          $ref: '#/components/schemas/datetime'
       additionalProperties:
         description: Any additional properties added in via extensions.
     itemCollectionLinks:
