--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -416,8 +416,8 @@ components:
 
         Only features that have a temporal property that intersects the value
 
-        of `time` are selected. If a feature has multiple temporal properties,
-        it
+        of `datetime` are selected. If a feature has multiple temporal
+        properties, it
 
         is the decision of the server whether only a single temporal property is
 
@@ -796,8 +796,8 @@ components:
 
         Only features that have a temporal property that intersects the value
 
-        of `time` are selected. If a feature has multiple temporal properties,
-        it
+        of `datetime` are selected. If a feature has multiple temporal
+        properties, it
 
         is the decision of the server whether only a single temporal property is
 
@@ -981,15 +981,13 @@ components:
         description: Any additional properties added in via extensions.
     itemCollectionLinks:
       type: array
-      description: >-
-        An array of links. Can be used for pagination, e.g. by providing a link
-        with the `next` relation type.
+      description: An array of links to resources related to this collection.
       items:
         $ref: '#/components/schemas/link'
       example:
         - rel: next
           href: >-
-            http://api.cool-sat.com/query/gasd312fsaeg/ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
+            http://api.cool-sat.com/stac/search?next=ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
     queryFilter:
       type: object
       description: Allows users to query properties for specific values
