--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -228,7 +228,7 @@ components:
         * An interval : "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/.."
 
         Only features that have a temporal property that intersects the value
-        of `time` are selected. If a feature has multiple temporal properties, it
+        of `datetime` are selected. If a feature has multiple temporal properties, it
         is the decision of the server whether only a single temporal property is
         used to determine the extent or all relevant temporal properties.
       required: false
@@ -359,7 +359,7 @@ components:
         * An interval : "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/.."
 
         Only features that have a temporal property that intersects the value
-        of `time` are selected. If a feature has multiple temporal properties, it
+        of `datetime` are selected. If a feature has multiple temporal properties, it
         is the decision of the server whether only a single temporal property is
         used to determine the extent or all relevant temporal properties.
       example: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
@@ -602,14 +602,13 @@ components:
     itemCollectionLinks:
       type: array
       description: >-
-        An array of links. Can be used for pagination, e.g. by providing a link
-        with the `next` relation type.
+        An array of links to resources related to this collection.
       items:
         $ref: '#/components/schemas/link'
       example:
         - rel: next
           href: >-
-            http://api.cool-sat.com/query/gasd312fsaeg/ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
+            http://api.cool-sat.com/stac/search?next=ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
 tags:
   - name: STAC
     description: Extension to WFS3 Core to support STAC metadata model and search API
