--- a/api-spec/extensions/transaction/transaction.fragment.yaml
+++ b/api-spec/extensions/transaction/transaction.fragment.yaml
@@ -81,6 +81,11 @@ paths:
       responses:
         '200':
           description: Status of the update request.
+          headers:
+            ETag:
+              schema:
+                type: string
+              description: A string to ensure the item has not been modified
           content:
             text/html:
               schema:
@@ -123,6 +128,11 @@ paths:
       responses:
         '200':
           description: Status of the update request.
+          headers:
+            ETag:
+              schema:
+                type: string
+              description: A string to ensure the item has not been modified
           content:
             text/html:
               schema:
