--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -120,7 +120,7 @@ paths:
         - $ref: '#/components/parameters/featureId'
       responses:
         '200':
-          $ref: '#/components/responses/Features'
+          $ref: '#/components/responses/Feature'
         '404':
           $ref: '#/components/responses/NotFound'
         '500':
@@ -228,34 +228,58 @@ components:
     bbox:
       name: bbox
       in: query
-      description: |
+      description: >-
         Only features that have a geometry that intersects the bounding box are
-        selected. The bounding box is provided as four or six numbers,
-        depending on whether the coordinate reference system includes a
-        vertical axis (elevation or depth):
+        selected.
+
+        The bounding box is provided as four or six numbers, depending on
+        whether the
+
+        coordinate reference system includes a vertical axis (elevation or
+        depth):
+
 
         * Lower left corner, coordinate axis 1
-        * Lower left corner, coordinate axis 2  
-        * Lower left corner, coordinate axis 3 (optional) 
-        * Upper right corner, coordinate axis 1 
-        * Upper right corner, coordinate axis 2 
+
+        * Lower left corner, coordinate axis 2
+
+        * Lower left corner, coordinate axis 3 (optional)
+
+        * Upper right corner, coordinate axis 1
+
+        * Upper right corner, coordinate axis 2
+
         * Upper right corner, coordinate axis 3 (optional)
 
-        The coordinate reference system of the values is WGS84
-        longitude/latitude (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless
-        a different coordinate reference system is specified in the parameter
-        `bbox-crs`.
 
-        For WGS84 longitude/latitude the values are in most cases the sequence
-        of minimum longitude, minimum latitude, maximum longitude and maximum
-        latitude. However, in cases where the box spans the antimeridian the
-        first value (west-most box edge) is larger than the third value
-        (east-most box edge).
+        The coordinate reference system of the values is WGS 84
+        longitude/latitude
+
+        (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a different
+        coordinate
+
+        reference system is specified in the parameter `bbox-crs`.
+
+
+        For WGS 84 longitude/latitude the values are in most cases the sequence
+        of
+
+        minimum longitude, minimum latitude, maximum longitude and maximum
+        latitude.
+
+        However, in cases where the box spans the antimeridian the first value
+
+        (west-most box edge) is larger than the third value (east-most box
+        edge).
 
 
         If a feature has multiple spatial geometry properties, it is the
-        decision of the server whether only a single spatial geometry property
-        is used to determine the extent or all relevant geometries.
+        decision of the
+
+        server whether only a single spatial geometry property is used to
+        determine
+
+        the extent or all relevant geometries.
       required: false
       schema:
         type: array
@@ -268,7 +292,7 @@ components:
     collectionId:
       name: collectionId
       in: path
-      description: Identifier (name) of a specific collection
+      description: local identifier of a collection
       required: true
       schema:
         type: string
@@ -310,24 +334,26 @@ components:
     featureId:
       name: featureId
       in: path
-      description: Local identifier of a specific feature
+      description: local identifier of a feature
       required: true
       schema:
         type: string
     limit:
       name: limit
       in: query
-      description: |
+      description: >-
         The optional limit parameter limits the number of items that are
         presented in the response document.
 
-        Only items are counted that are on the first level of the collection in
-        the response document. Nested objects contained within the explicitly
-        requested items shall not be counted.
 
-        * Minimum = 1
-        * Maximum = 10000
-        * Default = 10
+        Only items are counted that are on the first level of the collection in
+        the response document.
+
+        Nested objects contained within the explicitly requested items shall not
+        be counted.
+
+
+        Minimum = 1. Maximum = 10000. Default = 10.
       required: false
       schema:
         type: integer
@@ -991,72 +1017,6 @@ components:
                     type: string
                   title:
                     type: string
-    collectionInfo:
-      type: object
-      required:
-        - stac_version
-        - id
-        - description
-        - license
-        - extent
-      properties:
-        stac_version:
-          type: string
-          example: 0.7.0
-        id:
-          description: 'identifier of the collection used, for example, in URIs'
-          type: string
-          example: buildings
-        keywords:
-          title: Keywords
-          type: array
-          items:
-            type: string
-            example:
-              - buildings
-              - properties
-              - constructions
-        version:
-          title: Collection Version
-          type: string
-          example: 2018Q3
-        license:
-          title: Collection License Name
-          type: string
-          example: Apache-2.0
-        providers:
-          type: array
-          items:
-            properties:
-              name:
-                title: Organization name
-                type: string
-                example: Big Building Corp
-              description:
-                title: Provider description
-                type: string
-                example: No further processing applied.
-              roles:
-                title: Organization roles
-                type: array
-                items:
-                  type: string
-                  enum:
-                    - producer
-                    - licensor
-                    - processor
-                    - host
-                example:
-                  - producer
-                  - licensor
-              url:
-                title: Homepage
-                description: >-
-                  Homepage on which the provider describes the dataset and
-                  publishes contact information.
-                type: string
-                format: url
-                example: 'http://www.big-building.com'
     itemCollection:
       description: >-
         A GeoJSON FeatureCollection augmented with foreign members that contain
@@ -1182,7 +1142,9 @@ components:
         datetime:
           $ref: '#/components/schemas/time'
       additionalProperties:
-        description: Any additional properties added in via extensions.
+        description: >-
+          Any additional properties added in via Item specification or
+          extensions.
     itemCollectionLinks:
       type: array
       description: >-
