--- a/api-spec/openapi/WFS3.yaml
+++ b/api-spec/openapi/WFS3.yaml
@@ -281,7 +281,9 @@ components:
             type: string
     exception:
       type: object
-# Commented out to as this conflicts with the STAC definition and leads to two entries "href" for required in the merged file.
+      description: |-
+        Information about the exception: an error code plus an optional description.
+# Commented out to as this conflicts with the STAC definition and leads to two entries "code" for required in the merged file.
 #     required:
 #       - code
       properties:
@@ -291,10 +293,12 @@ components:
           type: string
     extent:
       type: object
+      description: |-
+        The extent of the features in the collection. In the Core only spatial and temporal
+        extents are specified. Extensions may add additional members to represent other
+        extents, for example, thermal or pressure ranges.
       properties:
         spatial:
-          description: |-
-            The spatial extent of the features in the collection.
           type: object
           properties:
             bbox:
