--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -770,6 +770,8 @@ components:
         stac_version:
           type: string
           example: 0.7.0
+        stac_extensions:
+          type: string
         id:
           type: string
           example: naip
@@ -806,6 +808,9 @@ components:
                   title:
                     type: string
     itemCollection:
+      description: >-
+        A GeoJSON FeatureCollection augmented with foreign members that contain
+        values relevant to a STAC entity
       type: object
       required:
         - features
@@ -822,6 +827,9 @@ components:
         links:
           $ref: '#/components/schemas/itemCollectionLinks'
     item:
+      description: >-
+        A GeoJSON Feature augmented with foreign members that contain values
+        relevant to a STAC entity
       type: object
       required:
         - id
@@ -928,13 +936,14 @@ components:
     itemCollectionLinks:
       type: array
       description: >-
-        An array of links to resources related to this collection.
+        An array of links. Can be used for pagination, e.g. by providing a link
+        with the `next` relation type.
       items:
         $ref: '#/components/schemas/link'
       example:
         - rel: next
           href: >-
-            http://api.cool-sat.com/stac/search?next=ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
+            http://api.cool-sat.com/query/gasd312fsaeg/ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
 servers:
   - url: 'http://dev.cool-sat.com'
     description: Development server
