--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -837,6 +837,9 @@ components:
                   title:
                     type: string
     itemCollection:
+      description: >-
+        A GeoJSON FeatureCollection augmented with foreign members that contain
+        values relevant to a STAC entity
       type: object
       required:
         - features
@@ -853,6 +856,9 @@ components:
         links:
           $ref: '#/components/schemas/itemCollectionLinks'
     item:
+      description: >-
+        A GeoJSON Feature augmented with foreign members that contain values
+        relevant to a STAC entity
       type: object
       required:
         - id
@@ -981,9 +987,11 @@ components:
       example:
         'eo:cloud_cover':
           lt: 50
-        providers: Planet
+        providers:
+          eq: Planet
         published:
-          date: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
+          gt: '2018-02-12T00:00:00Z'
+          lte: '2018-03-18T12:31:12Z'
         'pl:item_type':
           startsWith: PSScene
         product:
@@ -1048,8 +1056,6 @@ components:
               description: >-
                 Find items with a property that matches one of the specified
                 strings. A case-insensitive comparison must be performed.
-            time:
-              $ref: '#/components/schemas/time'
     sortFilter:
       type: object
       description: Sort the results
