--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -942,11 +942,13 @@ components:
         - rel: next
           href: >-
             http://api.cool-sat.com/stac/search?next=ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
+tags:
+  - name: Capabilities
+  - name: Features
+  - name: STAC
+    description: Extension to WFS3 Core to support STAC metadata model and search API
 servers:
   - url: 'http://dev.cool-sat.com'
     description: Development server
   - url: 'http://www.cool-sat.com'
     description: Production server
-tags:
-  - name: STAC
-    description: Extension to WFS3 Core to support STAC metadata model and search API
