--- a/api-spec/extensions/STAC-extensions.merge.yaml
+++ b/api-spec/extensions/STAC-extensions.merge.yaml
@@ -1,1 +1,1 @@
-!!files_merge_append ["STAC.yaml", "extensions/query/query.fragment.yaml", "extensions/sort/sort.fragment.yaml", "extensions/fields/fields.fragment.yaml"]
+!!files_merge_append ["STAC.yaml", "extensions/query/query.fragment.yaml", "extensions/sort/sort.fragment.yaml", "extensions/fields/fields.fragment.yaml", "extensions/search/search.fragment.yaml"]
