--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -329,6 +329,21 @@ components:
         server whether only a single temporal property is used to determine
         the extent or all relevant temporal properties.
       example: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
+    stac_version:
+      title: STAC version
+      type: string
+      example: 0.7.0
+    stac_extensions:
+      title: STAC extensions
+      type: array
+      uniqueItems: true
+      items:
+        anyOf:
+          - title: Reference to a JSON Schema
+            type: string
+            format: uri
+          - title: Reference to a core extension
+            type: string
     catalogDefinition:
       type: object
       required:
@@ -338,10 +353,9 @@ components:
         - links
       properties:
         stac_version:
-          type: string
-          example: 0.7.0
+          $ref: '#/components/schemas/stac_version'
         stac_extensions:
-          type: string
+          $ref: '#/components/schemas/stac_extensions'
         id:
           type: string
           example: naip
@@ -396,6 +410,7 @@ components:
       description:  A GeoJSON Feature augmented with foreign members that contain values relevant to a STAC entity
       type: object
       required:
+        - stac_version
         - id
         - type
         - geometry
@@ -404,6 +419,10 @@ components:
         - properties
         - assets
       properties:
+        stac_version:
+          $ref: '#/components/schemas/stac_version'
+        stac_extensions:
+          $ref: '#/components/schemas/stac_extensions'
         id:
           $ref: '#/components/schemas/itemId'
         bbox:
@@ -421,6 +440,7 @@ components:
         assets:
           $ref: '#/components/schemas/itemAssets'
       example:
+        stac_version: '0.7.0'
         type: Feature
         id: CS3-20160503_132130_04
         bbox:
