--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -162,7 +162,7 @@ paths:
         - $ref: '#/components/parameters/limit'
         - $ref: '#/components/parameters/next'
         - $ref: '#/components/parameters/ids'
-        - $ref: '#/components/parameters/collections'
+        - $ref: '#/components/parameters/collectionsArray'
       responses:
         '200':
           description: A feature collection.
@@ -222,21 +222,6 @@ paths:
                 type: string
 components:
   parameters:
-    bbox:
-      name: bbox
-      in: query
-      description:
-        $ref: '#/components/schemas/bbox/description'
-      required: false
-      schema:
-        type: array
-        minItems: 4
-        maxItems: 6
-        items:
-          type: number
-        $ref: '#/components/schemas/bbox'
-      style: form
-      explode: false
     collectionId:
       name: collectionId
       in: path
@@ -244,17 +229,6 @@ components:
       required: true
       schema:
         type: string
-    datetime:
-      name: datetime
-      in: query
-      description:
-        $ref: '#/components/schemas/datetime/description'
-      required: false
-      schema:
-        type: string
-        $ref: '#/components/schemas/datetime'
-      style: form
-      explode: false
     featureId:
       name: featureId
       in: path
@@ -269,10 +243,6 @@ components:
         $ref: '#/components/schemas/limit/description'
       required: false
       schema:
-        type: integer
-        minimum: 1
-        maximum: 10000
-        default: 10
         $ref: '#/components/schemas/limit'
       style: form
       explode: false
@@ -294,15 +264,35 @@ components:
       schema:
         $ref: '#/components/schemas/ids'
       explode: false
-    collections:
+    collectionsArray:
       name: collections
       in: query
       description:
-        $ref: '#/components/schemas/collections/description'
+        $ref: '#/components/schemas/collectionsArray/description'
       required: false
       schema:
-        $ref: '#/components/schemas/collections'
+        $ref: '#/components/schemas/collectionsArray'
       explode: false
+    bbox:
+      name: bbox
+      in: query
+      description:
+        $ref: '#/components/schemas/bbox/description'
+      required: false
+      schema:
+        $ref: '#/components/schemas/bbox'
+      style: form
+      explode: false
+    datetime:
+      name: datetime
+      in: query
+      description:
+        $ref: '#/components/schemas/datetime/description'
+      schema:
+        $ref: '#/components/schemas/datetime'
+      required: false
+      explode: false
+      style: form
   schemas:
     collection:
       type: object
@@ -351,7 +341,7 @@ components:
             - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
             - 'http://www.opengis.net/def/crs/EPSG/0/4326'
     collections:
-      type: array
+      type: object
       required:
         - links
         - collections
@@ -364,11 +354,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/collection'
-      description: |
-        Array of Collection IDs to include in the search for items.
-        Only Items in one of the provided Collections will be searched
-      items:
-        type: string
     confClasses:
       type: object
       required:
@@ -809,6 +794,13 @@ components:
       properties:
         bbox:
           $ref: '#/components/schemas/bbox'
+    collectionsArray:
+      type: array
+      description: |
+        Array of Collection IDs to include in the search for items.
+        Only Items in one of the provided Collections will be searched
+      items:
+        type: string
     ids:
       type: array
       description: >
@@ -853,7 +845,7 @@ components:
       description: Only returns the collections specified
       properties:
         collections:
-          $ref: '#/components/schemas/collections'
+          $ref: '#/components/schemas/collectionsArray'
     datetime:
       type: string
       description: >-
