repeat description values to comply with open-api $ref requirements

--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -421,8 +421,7 @@ components:
     limit:
       name: limit
       in: query
-      description:
-        $ref: '#/components/schemas/limit/description'
+      description: The maximum number of results to return (page size). Defaults to 10
       required: false
       schema:
         $ref: '#/components/schemas/limit'
@@ -431,8 +430,9 @@ components:
     next:
       name: next
       in: query
-      description:
-        $ref: '#/components/schemas/next/description'
+      description: >-
+        The token to retrieve the next set of results, e.g., offset, page,
+        continuation token
       required: false
       schema:
         $ref: '#/components/schemas/next'
@@ -440,8 +440,11 @@ components:
     ids:
       name: ids
       in: query
-      description:
-        $ref: '#/components/schemas/ids/description'
+      description: >
+        Array of Item ids to return. All other filter parameters that further
+        restrict the number of 
+
+        search results (except `next` and `limit`) are ignored
       required: false
       schema:
         $ref: '#/components/schemas/ids'
@@ -449,8 +452,9 @@ components:
     collectionsArray:
       name: collections
       in: query
-      description:
-        $ref: '#/components/schemas/collectionsArray/description'
+      description: |
+        Array of Collection IDs to include in the search for items.
+        Only Items in one of the provided Collections will be searched
       required: false
       schema:
         $ref: '#/components/schemas/collectionsArray'
@@ -458,8 +462,34 @@ components:
     bbox:
       name: bbox
       in: query
-      description:
-        $ref: '#/components/schemas/bbox/description'
+      description: |
+        Only features that have a geometry that intersects the bounding box are
+        selected. The bounding box is provided as four or six numbers,
+        depending on whether the coordinate reference system includes a
+        vertical axis (elevation or depth):
+
+        * Lower left corner, coordinate axis 1
+        * Lower left corner, coordinate axis 2  
+        * Lower left corner, coordinate axis 3 (optional) 
+        * Upper right corner, coordinate axis 1 
+        * Upper right corner, coordinate axis 2 
+        * Upper right corner, coordinate axis 3 (optional)
+
+        The coordinate reference system of the values is WGS84
+        longitude/latitude (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless
+        a different coordinate reference system is specified in the parameter
+        `bbox-crs`.
+
+        For WGS84 longitude/latitude the values are in most cases the sequence
+        of minimum longitude, minimum latitude, maximum longitude and maximum
+        latitude. However, in cases where the box spans the antimeridian the
+        first value (west-most box edge) is larger than the third value
+        (east-most box edge).
+
+
+        If a feature has multiple spatial geometry properties, it is the
+        decision of the server whether only a single spatial geometry property
+        is used to determine the extent or all relevant geometries.
       required: false
       schema:
         $ref: '#/components/schemas/bbox'
@@ -468,8 +498,33 @@ components:
     datetime:
       name: datetime
       in: query
-      description:
-        $ref: '#/components/schemas/datetime/description'
+      description: >-
+        Either a date-time or an interval, open or closed. Date and time
+        expressions
+
+        adhere to RFC 3339. Open intervals are expressed using double-dots.
+
+
+        Examples:
+
+
+        * A date-time: "2018-02-12T23:20:50Z"
+
+        * A closed interval: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z"
+
+        * Open intervals: "2018-02-12T00:00:00Z/.." or "../2018-03-18T12:31:12Z"
+
+
+        Only features that have a temporal property that intersects the value of
+
+        `datetime` are selected.
+
+
+        If a feature has multiple temporal properties, it is the decision of the
+
+        server whether only a single temporal property is used to determine
+
+        the extent or all relevant temporal properties.
       schema:
         $ref: '#/components/schemas/datetime'
       required: false
