Some cleanup of non-bulk spec first

--- a/api-spec/extensions/crud/crud.fragment.yaml
+++ b/api-spec/extensions/crud/crud.fragment.yaml
@@ -2,11 +2,11 @@ openapi: 3.0.1
 paths:
   '/collections/{collectionId}/items':
     post:
-      summary: add a new feature to a collection
-      description: create a new feature in a specific collection
-      operationId: postFeature
+      summary: add a new item to a collection
+      description: create a new item in a specific collection
+      operationId: postItem
       tags:
-        - Transaction Extension
+        - CRUD Extension
       parameters:
         - $ref: '#/components/parameters/collectionId'
       requestBody:
@@ -18,7 +18,7 @@ paths:
                  - $ref: '#/components/schemas/itemCollection'
       responses:
         '201':
-          description: Status of the create request.
+          description: Create request succeeded.
           headers:
             Location:
               description: A link to the item
@@ -53,19 +53,20 @@ paths:
     get:
       responses:
         '200':
+          description: Get request succeeded.
           headers:
             ETag:
               schema:
                 type: string
               description: A string to ensure the item has not been modified
     put:
-      summary: update an existing feature by Id with a complete item definition
+      summary: update an existing item by id with a complete item definition
       description: >-
-        Use this method to update an existing feature. Requires the entire
+        Use this method to update an existing item. Requires the entire
         GeoJSON  description be submitted.
-      operationId: putFeature
+      operationId: putItem
       tags:
-        - Transaction Extension
+        - CRUD Extension
       parameters:
         - $ref: '#/components/parameters/collectionId'
         - $ref: '#/components/parameters/featureId'
@@ -77,7 +78,7 @@ paths:
               $ref: '#/components/schemas/item'
       responses:
         '200':
-          description: Status of the update request.
+          description: Put request succeeded.
           headers:
             ETag:
               schema:
@@ -94,6 +95,8 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
+        '412':
+          $ref: '#/components/responses/PreconditionFailed'
         '5XX':
           $ref: '#/components/responses/InternalServerError'
         default:
@@ -106,13 +109,13 @@ paths:
               schema:
                 type: string
     patch:
-      summary: update an existing feature by Id with a partial item definition
+      summary: update an existing item by id with a partial item definition
       description: >-
-        Use this method to update an existing feature. Requires a GeoJSON 
+        Use this method to update an existing item. Requires a GeoJSON
         fragement (containing the fields to be updated) be submitted.
-      operationId: patchFeature
+      operationId: patchItem
       tags:
-        - Transaction Extension
+        - CRUD Extension
       parameters:
         - $ref: '#/components/parameters/collectionId'
         - $ref: '#/components/parameters/featureId'
@@ -124,7 +127,7 @@ paths:
               $ref: '#/components/schemas/partialItem'
       responses:
         '200':
-          description: Status of the update request.
+          description: Patch request succeeded.
           headers:
             ETag:
               schema:
@@ -141,6 +144,8 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
+        '412':
+          $ref: '#/components/responses/PreconditionFailed'
         '5XX':
           $ref: '#/components/responses/InternalServerError'
         default:
@@ -153,22 +158,24 @@ paths:
               schema:
                 type: string
     delete:
-      summary: delete an existing feature by Id
-      description: Use this method to delete an existing feature.
-      operationId: deleteFeature
+      summary: delete an existing item by id
+      description: Use this method to delete an existing item.
+      operationId: deleteItem
       tags:
-        - Transaction Extension
+        - CRUD Extension
       parameters:
         - $ref: '#/components/parameters/collectionId'
         - $ref: '#/components/parameters/featureId'
         - $ref: '#/components/parameters/IfMatch'
       responses:
         '204':
-          description: Status of the delete request.
+          description: Delete request succeeded.
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
+        '412':
+          $ref: '#/components/responses/PreconditionFailed'
         '5XX':
           $ref: '#/components/responses/InternalServerError'
         default:
@@ -186,7 +193,7 @@ components:
       name: If-Match
       in: header
       description: >-
-        Only take the action if the ETag of the item still matches
+        Only take the action if the ETag of the item still matches the If-Match header of the request
       required: true
       schema:
         type: string
@@ -194,7 +201,7 @@ components:
       name: If-Match
       in: header
       description: >-
-        Only take the action if the ETag of the item still matches
+        Only take the action if the ETag of the item still matches the If-Match header of the request
       required: false
       schema:
         type: string
@@ -207,7 +214,7 @@ components:
         stac_extensions:
           $ref: '#/components/schemas/stac_extensions'
         id:
-          $ref: '#/components/schemas/itemId'
+          $ref: '#/components/schemas/featureId'
         bbox:
           $ref: '#/components/schemas/bbox'
         geometry:
@@ -247,6 +254,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/exception'
+    PreconditionFailed:
+      description: The ETag of the item did not match the If-Match header of the request
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/exception'
     InternalServerError:
       description: The request was syntactically and semantically valid, but an error occurred while trying to act upon it
       content:
@@ -254,7 +267,7 @@ components:
           schema:
             $ref: '#/components/schemas/exception'
 tags:
-  - name: Transaction Extension
+  - name: CRUD Extension
     description: >-
       STAC-specific operations to add, remove, and edit items within WFS3
       collections.
